Upgrade project to Java 21 using openrewrite.